syntax = "proto3";
package layer.registry;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/tellor-io/layer/x/registry/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  // max report buffer window
  uint64 max_report_buffer_window = 1;
}
